docs/semantic-ontology/linkml/tests/invalid/empty-policies.jsonld
{
    "@context": {
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#"
    },
    "@id": "did:web:localhost:template:test-empty-policies",
    "@type": "dcs:ContractTemplate",
    "dcs:metadata": {
        "@id": "did:web:localhost:template:test-empty-policies#metadata",
        "@type": "dcs:TemplateMetadata",
        "dcs:title": "No Policies Template"
    }
}
